--- a/style.css
+++ b/style.css
@@ -932,43 +932,43 @@ footer {
 
 
 .cursorwhite {
-    cursor: url(/assets/cursor/cursorwhite.svg), pointer;
+    cursor: url(/assets/cursor/cursorwhite.png), pointer;
 }
 
 #background {
-    cursor: url(/assets/cursor/cursorwhite.svg), pointer;
+    cursor: url(/assets/cursor/cursorwhite.png), pointer;
 }
 
 
 #tristezza {
-    cursor: url(/assets/cursor/tristezzaword.svg), pointer;
+    cursor: url(/assets/cursor/tristezzaword.png), pointer;
 }
 
 #gioia {
-    cursor: url(/assets/cursor/gioiaword.svg), pointer;
+    cursor: url(/assets/cursor/gioiaword.png), pointer;
 }
 
 #serenita {
-    cursor: url(/assets/cursor/serenitaword.svg), pointer;
+    cursor: url(/assets/cursor/serenitaword.png), pointer;
 }
 
 #amore {
-    cursor: url(/assets/cursor/amoreword.svg), pointer;
+    cursor: url(/assets/cursor/amoreword.png), pointer;
 }
 
 #morte {
-    cursor: url(/assets/cursor/morteword.svg), pointer;
+    cursor: url(/assets/cursor/morteword.png), pointer;
 }
 
 #neutro {
-    cursor: url(/assets/cursor/cursorwhite.svg), pointer;
+    cursor: url(/assets/cursor/cursorwhite.png), pointer;
 
 }
 
 #restart {
-    cursor: url(/assets/cursor/medusinamini.svg), pointer;
+    cursor: url(/assets/cursor/medusinamini.png), pointer;
 }
 
 #emotions {
-    cursor: url(/assets/cursor/cursorwhitemini.svg), pointer;
+    cursor: url(/assets/cursor/cursorwhitemini.png), pointer;
 }
