--- a/style.css
+++ b/style.css
@@ -692,7 +692,7 @@ svg {
     opacity: 0;
     filter: blur(4px);
     animation: scale 1000s forwards cubic-bezier(0.5, 1, 0.89, 1);
-    cursor: none;
+    /* cursor: none; */
 }
 
 #arrows:nth-child(1) {
@@ -930,7 +930,7 @@ footer {
  ╚═════╝ ╚═════╝ ╚═╝  ╚═╝╚══════╝ ╚═════╝ ╚═╝  ╚═╝
 */
 
-
+/* 
 .cursorwhite {
     cursor: url(/assets/cursor/cursorwhite.png), pointer;
 }
@@ -971,4 +971,4 @@ footer {
 
 #emotions {
     cursor: url(/assets/cursor/cursorwhitemini.png), pointer;
-}
+} */
